--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "dependencies": {
     "angular": "~1.2.12",
-    "ionic": "v1.0.0-beta.4"
+    "ionic": "v1.0.0-beta.4",
+    "firebase": "~1.0.15",
+    "angularfire": "~0.7.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.12",
