--- a/package.json
+++ b/package.json
@@ -23,17 +23,17 @@
     "grunt-ngmin": "~0.0.2",
     "grunt-karma": "~0.8.0",
     "karma": "~0.12.0",
-    "karma-mocha": "~0.1.3",
-    "karma-chai": "~0.1.0",
     "karma-chrome-launcher": "~0.1.2",
-    "karma-phantomjs-launcher": "~0.1.2",
+    "karma-phantomjs-launcher": "^0.1.4",
     "karma-coverage": "~0.2.0",
     "jshint-stylish": "~0.1.3",
     "load-grunt-tasks": "~0.2.0",
     "time-grunt": "~0.2.1",
     "cordova": "~3.4.0-0.1.3",
     "lodash": "~2.4.1",
-    "ripple-emulator": "~0.9.20"
+    "ripple-emulator": "~0.9.20",
+    "karma-jasmine": "^0.2.2",
+    "karma-coffee-preprocessor": "^0.2.1"
   },
   "engines": {
     "node": ">=0.10.0"
