--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "lodash": "~2.4.1",
     "ripple-emulator": "~0.9.20",
     "karma-jasmine": "^0.2.2",
-    "karma-coffee-preprocessor": "^0.2.1"
+    "karma-coffee-preprocessor": "^0.2.1",
+    "grunt-html2js": "^0.2.6"
   },
   "engines": {
     "node": ">=0.10.0"
