--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "ripple-emulator": "~0.9.20",
     "karma-jasmine": "^0.2.2",
     "karma-coffee-preprocessor": "^0.2.1",
-    "grunt-html2js": "^0.2.6"
+    "grunt-html2js": "^0.2.6",
+    "karma-firefox-launcher": "^0.1.3"
   },
   "engines": {
     "node": ">=0.10.0"
