--- a/bower.json
+++ b/bower.json
@@ -5,11 +5,11 @@
     "angular": "~1.2.12",
     "ionic": "v1.0.0-beta.5b",
     "firebase": "~1.0.15",
-    "angularfire": "~0.7.1"
+    "angularfire": "~0.7.1",
+    "underscore": "~1.6.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.12",
     "angular-scenario": "~1.2.12"
   }
 }
-
