--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,8 @@
     "ionic": "v1.0.0-beta.5b",
     "firebase": "~1.0.15",
     "angularfire": "~0.7.1",
-    "lodash": "~2.4.1"
+    "lodash": "~2.4.1",
+    "angular-bindonce": "~0.3.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.12",
