--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "dependencies": {
     "angular": "~1.2.12",
-    "ionic": "v1.0.0-beta.5b",
+    "ionic": "v1.0.0-beta.6",
     "firebase": "~1.0.15",
     "angularfire": "~0.7.1",
     "lodash": "~2.4.1",
