--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,9 @@
     "firebase": "~1.0.15",
     "angularfire": "~0.7.1",
     "lodash": "~2.4.1",
-    "angular-bindonce": "~0.3.1"
+    "angular-bindonce": "~0.3.1",
+    "moment": "~2.7.0",
+    "moment-range": "~1.0.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.12",
