--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "Muzza",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "~1.2.12",
+    "angular": "1.3.0-beta.17",
     "ionic": "v1.0.0-beta.6",
     "firebase": "~1.0.15",
     "angularfire": "~0.7.1",
