--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ before_script:
   - npm install -g grunt-cli
   - npm install -g bower
   - npm install
+  - bower install angular#1.3.0-beta.17
   - bower install
 notifications:
   email:
