--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,10 @@
     "angular-bindonce": "~0.3.1"
   },
   "devDependencies": {
-    "angular-mocks": "~1.2.12",
-    "angular-scenario": "~1.2.12"
+    "angular-mocks": "~1.2.21",
+    "angular-scenario": "~1.2.21"
+  },
+  "resolutions": {
+    "angular": "1.3.0-beta.17"
   }
 }
